// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|StepNavigation Default 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 23px;
}

.c0 {
  height: 155px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c3 {
  width: calc(50% - 5px);
}

.c4 {
  width: calc(50% - 5px);
}

@media (min-width:1040px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c1 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c3 {
    width: 23.5%;
    -webkit-transform: translateX(255px);
    -ms-transform: translateX(255px);
    transform: translateX(255px);
  }
}

@media (min-width:1040px) {
  .c4 {
    width: 23.5%;
    -webkit-transform: translateX(-255px);
    -ms-transform: translateX(-255px);
    transform: translateX(-255px);
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          className="c3"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
          type="back"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          className="c4"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
          type="next"
        >
          <span>
            Next
          </span>
        </button>
        <div
          className="c5"
        >
          <div
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
                "margin": "0 auto",
                "pointerEvents": "none",
              }
            }
          >
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "borderRadius": "50%",
                  "cursor": "default",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "pointerEvents": "none",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|StepNavigation Disabled back 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 23px;
}

.c0 {
  height: 155px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c3 {
  width: calc(50% - 5px);
}

.c4 {
  width: calc(50% - 5px);
}

@media (min-width:1040px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c1 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c3 {
    width: 23.5%;
    -webkit-transform: translateX(255px);
    -ms-transform: translateX(255px);
    transform: translateX(255px);
  }
}

@media (min-width:1040px) {
  .c4 {
    width: 23.5%;
    -webkit-transform: translateX(-255px);
    -ms-transform: translateX(-255px);
    transform: translateX(-255px);
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          className="c3"
          disabled={true}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#71737e",
              "cursor": "default",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
          type="back"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          className="c4"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
          type="next"
        >
          <span>
            Next
          </span>
        </button>
        <div
          className="c5"
        >
          <div
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
                "margin": "0 auto",
                "pointerEvents": "none",
              }
            }
          >
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "borderRadius": "50%",
                  "cursor": "default",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "pointerEvents": "none",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|StepNavigation Disabled next 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 23px;
}

.c0 {
  height: 155px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c3 {
  width: calc(50% - 5px);
}

.c4 {
  width: calc(50% - 5px);
}

@media (min-width:1040px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c1 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c3 {
    width: 23.5%;
    -webkit-transform: translateX(255px);
    -ms-transform: translateX(255px);
    transform: translateX(255px);
  }
}

@media (min-width:1040px) {
  .c4 {
    width: 23.5%;
    -webkit-transform: translateX(-255px);
    -ms-transform: translateX(-255px);
    transform: translateX(-255px);
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          className="c3"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
          type="back"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          className="c4"
          disabled={true}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#71737e",
              "cursor": "default",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
          type="next"
        >
          <span>
            Next
          </span>
        </button>
        <div
          className="c5"
        >
          <div
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
                "margin": "0 auto",
                "pointerEvents": "none",
              }
            }
          >
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "borderRadius": "50%",
                  "cursor": "default",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "pointerEvents": "none",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|StepNavigation Loading 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 23px;
}

.c0 {
  height: 155px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c3 {
  width: calc(50% - 5px);
}

.c4 {
  width: calc(50% - 5px);
}

@media (min-width:1040px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c1 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c3 {
    width: 23.5%;
    -webkit-transform: translateX(255px);
    -ms-transform: translateX(255px);
    transform: translateX(255px);
  }
}

@media (min-width:1040px) {
  .c4 {
    width: 23.5%;
    -webkit-transform: translateX(-255px);
    -ms-transform: translateX(-255px);
    transform: translateX(-255px);
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          className="c3"
          disabled={true}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#71737e",
              "cursor": "default",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
          type="back"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          className="c4"
          disabled={true}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#71737e",
              "cursor": "default",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
          type="next"
        >
          <span>
            Loading...
          </span>
        </button>
        <div
          className="c5"
        >
          <div
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
                "margin": "0 auto",
                "pointerEvents": "none",
              }
            }
          >
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "borderRadius": "50%",
                  "cursor": "default",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "pointerEvents": "none",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|StepNavigation Next step 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  margin-top: 23px;
}

.c0 {
  height: 155px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c1 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c3 {
  width: calc(50% - 5px);
}

.c4 {
  width: calc(50% - 5px);
}

@media (min-width:1040px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c1 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c3 {
    width: 23.5%;
    -webkit-transform: translateX(255px);
    -ms-transform: translateX(255px);
    transform: translateX(255px);
  }
}

@media (min-width:1040px) {
  .c4 {
    width: 23.5%;
    -webkit-transform: translateX(-255px);
    -ms-transform: translateX(-255px);
    transform: translateX(-255px);
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <button
          className="c3"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
          type="back"
        >
          <span>
            Back
          </span>
        </button>
        <button
          className="c4"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
            }
          }
          type="next"
        >
          <span>
            Next
          </span>
        </button>
        <div
          className="c5"
        >
          <div
            style={
              Object {
                "display": "flex",
                "flexDirection": "row",
                "margin": "0 auto",
                "pointerEvents": "none",
              }
            }
          >
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "borderRadius": "50%",
                  "cursor": "default",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "pointerEvents": "none",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
            <span
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "borderRadius": "50%",
                  "cursor": "pointer",
                  "display": "block",
                  "height": "12px",
                  "margin": "0 4px",
                  "width": "12px",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
